# py-squaremap-combiner

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  gui.py  pyproject.toml  requirements.txt  ruff.toml  sqmap.py  style_example.json
.github/workflows/: lint_test.yml  run_tests.yml
_build/doctrees/: environment.pickle  index.doctree  util.doctree
_build/doctrees/reference/: core.doctree  errors.doctree  index.doctree  util.doctree
_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  util.html
_build/html/_sources/: util.rst.txt
_build/html/_sources/reference/: errors.rst.txt
_build/html/reference/: core.html  errors.html  index.html  util.html
_readthedocs/html/: search.js
_readthedocs/html/squaremap_combine/: combine_core.html  type_alias.html
docs/: changelog.rst  conf.py  index.html  index.rst  modules.rst  readme.rst  requirements.txt  squaremap_combine.html  squaremap_combine.rst
docs/reference/: core.rst  errors.rst  geo.rst  index.rst  util.rst
docs/source/: conf.py  index.rst  modules.rst
docs/source/_autosummary/: squaremap_combine.rst
docs/squaremap_combine/: combine_cli.html  errors.html  helper.html
example-tiles/2000x2000/minecraft_overworld/: markers.json
example-tiles/2000x2000/minecraft_the_nether/: settings.json
src/squaremap_combine/: __init__.py  __main__.py  cli.py  combine_cli.py  combine_core.py  const.py  core.py  errors.py  geo.py  helper.py  logging.py  project.py  squaremap_combine.py  type_alias.py  util.py
src/squaremap_combine/gui/: __init__.py  __main__.py  actions.py  combine_gui.py  layout.py  mock_core.py  models.py  styling.py  themes.py
src/squaremap_combine_svioletg/: squaremap_combine.py
src/squaremap_combiner/: __main__.py  squaremap_combiner.py
tests/: test_cli_parse.py  test_color_class.py  test_combine.py  test_combine_core.py  test_geometry.py  test_grid_class.py  test_rect_and_grid.py
tests/data/control/: control_group_hash.json
tests/data/example-tiles/2000x2000/minecraft_the_end/: markers.json
tests/data/example-tiles/2000x2000/minecraft_the_nether/: markers.json
