[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "squaremap_combine"
version = "0.25.2"
authors = [
  { name="Seth 'Violet' Gibbs" },
]
description = "Provides tools to combine tile images created by the 'squaremap' Minecraft plugin into one single world image."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies=[
  "loguru==0.7.2",
  "pillow==10.4.0",
  "platformdirs==4.3.6",
  "tqdm==4.66.5"
]

[project.optional-dependencies]
gui = [
  "dearpygui==2.0.0"
]

[project.urls]
Homepage = "https://github.com/svioletg/py-squaremap-combiner"
Issues = "https://github.com/svioletg/py-squaremap-combiner/issues"

[tool.setuptools.packages.find]
where = ["src"]
